tests/ui/typeck/issue-112437-extra-arg-comma-removal-debug-ice.stderr
error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/issue-112437-extra-arg-comma-removal-debug-ice.rs:6:5
   |
LL |     f(panic!(), 1);
   |     ^         ---
   |               | |
   |               | unexpected argument of type `{integer}`
   |               help: remove the extra argument
   |
note: function defined here
  --> $DIR/issue-112437-extra-arg-comma-removal-debug-ice.rs:3:4
   |
LL | fn f(a: !) {}
   |    ^ ----

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
